# ozx-tck

./: README.md  fetch_data.sh  pyproject.toml
src/ozx_tck/: __init__.py  __main__.py  base.py  executor.py  invalid.py  util.py  valid.py  warning.py
src/ozx_tck/generate/: __init__.py  base.py  invalid.py  main.py  valid.py  warning.py
src/ozx_tck/validate/: __init__.py
